 * Rewrote the entire animation system to allow meta icons to inherit icon animations.
 * Text outputs now substitute a hyperlink for '%s' when appropriate.
 * You can now leave the unit cooldown icon's "Unit(s) to watch" field blank to track all known units.
 * Bug Fixes:
 ** (r384) Weapon enchant should now be properly detected in zhCH clients
 ** (r384) The weapon enchant suggestion list should now properly display shaman enchants in zhTW clients
 ** (r384) TellMeWhen_Options.lua:2092 Usage: GetAddon(name): 'name' - Cannot find an AceAddon 'LUI_Cooldown'
 ** (r385) Moving/Swapping an icon that the icon editor is editing shouldn't cause the old settings to stick around
 ** (r390) Weapon enchant icons should now always detect the current weapon enchant in a timely manner for rogue characters
 ** (r391) Added the debuff that results from being the the target of a warrior who casts intimidating shout with the glyph
 ** (r396) Buff/debuff icons should now set an ID as their spell checked rather than a name, allowing them to function more completely with the hyperlink feature of r395
 ** (r397) Animations inherited by a meta icon should now properly cancel when the meta icon changes to an icon with no animations
 ** (r398) Both ranks of Shattered Barrier should now be included in the "Rooted" equivalency
 ** (r401) Conditions that check units should now work again (oops)
 ** (r402) Condition:1: attempt to index global "c" (a nil value)
 ** (r403) StaticFormats.lua line 27: bad argument #1 to 'format' (number expected, got string)

===v4.7.3===
 * New Feature: Animations. You can now pick animations to play when an icon event occurs, such as having the screen shake or an icon flash.
 * All event outlets have a "Play" button that you can test the event with.
 * You can now change the "Show Timer Text" option if LUI is the only addon enabled that can handle cooldown timer texts.