@@ -998,7 +998,7 @@ L["ANIM_SECONDS"] = "%s Seconds"
 L["ANIM_DURATION"] = "Animation Duration"
 L["ANIM_DURATION_DESC"] = "Set how long the animation should last after it is triggered."
 L["ANIM_PERIOD"] = "Flash Period"
-L["ANIM_PERIOD_DESC"] = "Set how long each flash should take."
+L["ANIM_PERIOD_DESC"] = "Set how long each flash should take - the time that the flash is shown or fading in."
 L["ANIM_MAGNITUDE"] = "Shake Magnitude"
 L["ANIM_MAGNITUDE_DESC"] = "Set how violent the shake should be."
 L["ANIM_COLOR"] = "Color/Opacity"
@@ -1016,8 +1016,10 @@ L["ANIM_ICONSHAKE"] = "Icon: Shake"
 L["ANIM_ICONSHAKE_DESC"] = "Shakes the icon when it is triggered."
 L["ANIM_ACTVTNGLOW"] = "Icon: Activation Border"
 L["ANIM_ACTVTNGLOW_DESC"] = "Displays the Blizzard spell activation border on the icon."
-L["ANIM_ICONFLASH"] = "Icon: Flash"
+L["ANIM_ICONFLASH"] = "Icon: Color Flash"
 L["ANIM_ICONFLASH_DESC"] = "Flashes a colored overlay across the icon."
+L["ANIM_ICONALPHAFLASH"] = "Icon: Alpha Flash"
+L["ANIM_ICONALPHAFLASH_DESC"] = "Flashes the icon itself by changing its opacity."
 L["ANIM_SCREENFLASH"] = "Screen: Flash"
 L["ANIM_SCREENFLASH_DESC"] = "Flashes a colored overlay across the screen."
 L["ANIM_ICONFADE"] = "Icon: Fade In/Out"
@@ -1051,7 +1053,7 @@ L["CLEU_SPELL_AURA_REFRESH"] = "Aura Refreshed"
 L["CLEU_SPELL_AURA_REMOVED"] = "Aura Removed"
 L["CLEU_SPELL_AURA_REMOVED_DOSE"] = "Aura Stack Removed"
 L["CLEU_SPELL_STOLEN"] = "Aura Stolen"
-L["CLEU_SPELL_STOLEN_DESC"] = [[Occurs when a buff is spellstolen, probably by %s.
+L["CLEU_SPELL_STOLEN_DESC"] = [[Occurs when a buff is stolen, probably by %s.
 
 Icon can be filtered by the spell that was stolen.]]
 L["CLEU_SPELL_CAST_FAILED"] = "Spell Cast Failed"
